# ComfyUI-APP-MCP

./: .gitignore  AGENTS.md  README.md  README_EN.md  TEST_PLAN.md  __init__.py  comfyui_client.py  config.py  data-flow.md  media_proxy.py  pyproject copy.toml  pyproject.toml  requirements.txt  routes.py  server.py  standalone.py  template_manager.py
.github/workflows/: publish_action.yml
docs/: README.md
docs/en/: development.md  standalone.md  tools.md  troubleshooting.md
docs/zh/: development.md  standalone.md  tools.md  troubleshooting.md
js/: index.js
js/core/: constants.js  http.js  i18n.js  prompt.js  runtimeSettings.js
js/ui/: createTemplateDialog.js  modal.js  settingsControls.js  styles.js  templateDetailDialog.js  templateWidget.js
standalone_example/: mcp.config.json
tests/: test_config.py
