[project]
name = "comfyui-mcp-server"
version = "0.1.0"
description = "MCP Server for ComfyUI - Manage and execute workflow templates via Model Context Protocol"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
comfyui-mcp = "comfyui_mcp.server:main"

[tool.comfy]
PublisherId = "comfyui-mcp"
DisplayName = "ComfyUI MCP Server"
