[project]
name = "app-mode-mcp"
description = "a ComfyUI plugin to transform APP Mode workflow to MCP"
version = "1.0.1"
license = { text = "MIT License" }
requires-python = ">=3.9"

classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Repository = "https://github.com/Luo-Lotus/ComfyUI-APP-MCP"
"Bug Tracker" = "https://github.com/Luo-Lotus/ComfyUI-APP-MCP/issues"

[tool.comfy]
PublisherId = "lotus"
DisplayName = "APP Mode MCP"
